=======
CHANGES
=======

3.6.4 (unreleased)
------------------

- None so far.

3.6.3 (2009-03-23)
------------------

- Ensure that simple zope.schema's VocabularyRegistry is used for 
  PermissionVocabulary tests, because it's replaced implicitly in
  environments with zope.app.schema installed that makes that tests
  fail.

- Fixed a bug in DecoratedSecurityCheckerDescriptor which made
  security-wrapping location proxied exception instances throw
  exceptions on Python 2.5.
  See https://bugs.launchpad.net/zope3/+bug/251848

3.6.2 (2009-03-14)
------------------

- Add zope.i18nmessageid.Message to non-proxied basic types. It's okay, because
  messages are immutable. It was done by zope.app.security before.

- Add "__name__" and "__parent__" attributes to list of available by default.
  This was also done by zope.app.security package before.

- Added PermissionsVocabulary and PermissionIdsVocabulary vocabularies
  to the ``zope.security.permission`` module. They were moved from
  the ``zope.app.security`` package.

- Add zcml permission definitions for most common and useful permissions,
  like "zope.View" and "zope.ManageContent", as well as for the special
  "zope.Public" permission. They are placed in a separate "permissions.zcml"
  file, so it can be easily excluded/redefined. They are selected part of
  permissions moved from ``zope.app.security`` and used by many zope.*
  packages.

- Add `addCheckerPublic` helper function in ``zope.security.testing`` module
  that registers the "zope.Public" permission as an IPermission utility.

- Add security declarations for the ``zope.security.permisson.Permission`` class.

- Improve test coverage.

3.6.1 (2009-03-10)
------------------

- Use ``from`` imports instead of ``zope.deferred`` to avoid circular
  import problems, thus drop dependency on ``zope.deferredimport``.

- Raise NoInteraction when zope.security.checkPermission is called
  without interaction being active (LP #301565).
