@@ -1,10 +1,14 @@
 [buildout]
 develop = .
-parts = test python coverage-test coverage-report
+parts = test test_pytz python coverage-test coverage-report
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = zope.security [test]
+
+[test_pytz]
+recipe = zc.recipe.testrunner
+eggs = zope.security [test,pytz]
 
 [python]
 recipe = zc.recipe.egg
