@@ -61,7 +61,6 @@ setup(name='zope.security',
                               ]),
                    ],
       install_requires=['setuptools',
-                        'pytz',
                         'zope.component',
                         'zope.configuration',
                         'zope.exceptions',
@@ -74,6 +73,7 @@ setup(name='zope.security',
       extras_require = dict(
           untrustedpython=["RestrictedPython"],
           test=["RestrictedPython"],
+          pytz=["pytz"],
           ),
       include_package_data = True,
       zip_safe = False,
